# charo

./: CMakeLists.txt  README.md
cmake/: charoConfig.cmake
examples/: CMakeLists.txt
examples/simple_project/: CMakeLists.txt  main.cpp
include/charo/: charo.hpp  context.hpp  terminal.hpp
include/charo/event/: events.hpp  key.hpp
include/charo/render/: color.hpp  common_types.hpp  converter.hpp  effect.hpp  escape.hpp  glyph.hpp  glyphspace.hpp  screen.hpp  style.hpp  widgets.hpp
include/charo/render/base/: common_types.hpp  converter.hpp  glyph.hpp  glyphspace.hpp
include/charo/render/style/: color.hpp  effect.hpp  style.hpp
include/charo/render/widgets/: widgets.hpp
src/: terminal.cpp
src/event/: events.cpp  key.cpp
src/render/: converter.cpp  escape.cpp  glyphspace.cpp  screen.cpp  widgets.cpp
src/render/base/: converter.cpp  glyphspace.cpp
src/render/widgets/: button.cpp  checkbox.cpp  slider.cpp  text.cpp  text_styled.cpp
tests/: CMakeLists.txt  test_app.cpp
